[gd_scene load_steps=8 format=4 uid="uid://b546qdlqdkfq8"]

[ext_resource type="Script" path="res://Scenes/Rooms/Room.gd" id="1_fiwmw"]
[ext_resource type="TileSet" uid="uid://d2r6muqog1lki" path="res://Scenes/FloorTileSet.tres" id="2_r21l8"]
[ext_resource type="Script" path="res://Scenes/Rooms/Stages/Stage1/DoorArea.gd" id="3_ojge6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqb4m"]
size = Vector2(164, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3t0k"]
size = Vector2(164, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js5nu"]
size = Vector2(74, 148)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i78nc"]
size = Vector2(68, 140)

[node name="NormalRoom" type="Node2D"]
script = ExtResource("1_fiwmw")

[node name="FloorLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAACQAAAAMAAFABAAAACAAAAAMAAFABAAEACQABAAMAADABAAIACAAAAAMAAAACAAIACgAAAAMAAAADAAIACgAAAAMAAAAEAAIACgAAAAMAAAAFAAIACgAAAAMAAAAGAAIACgAAAAMAAAAGAAEACwAAAAIAAFAFAAEACwAAAAIAAFAEAAEACwAAAAIAAFADAAEACwAAAAIAAFACAAEACwAAAAIAAFAAAAEACAAAAAMAAAAAAAIACAAAAAMAAAAAAAMACAAAAAMAAAAAAAQACAAAAAMAAAABAAQACAAAAAMAAAABAAMACAAAAAMAAAACAAMACgAAAAMAAAADAAMACgAAAAMAAAADAAQACgAAAAMAAAACAAQACgAAAAMAAAAEAAMACgAAAAMAAAAFAAMACgAAAAMAAAAFAAQACgAAAAMAAAAEAAQACgAAAAMAAAAGAAMACgAAAAMAAAAGAAQACgAAAAMAAAAGAAAACAAAAAMAAFAFAAAACAAAAAMAAFAEAAAACAAAAAMAAFADAAAACAAAAAMAAFACAAAACAAAAAMAAFAAAAUACAAAAAMAAAAAAAYACAAAAAMAAAAAAAcACAAAAAMAAAABAAcACAAAAAMAAAACAAcACgAAAAMAAAADAAcACgAAAAMAAAADAAYACgAAAAMAAAADAAUACgAAAAMAAAACAAUACgAAAAMAAAACAAYACgAAAAMAAAABAAYACAAAAAMAAAABAAUACAAAAAMAAAAEAAUACgAAAAMAAAAFAAUACgAAAAMAAAAFAAYACgAAAAMAAAAFAAcACgAAAAMAAAAEAAcACgAAAAMAAAAEAAYACgAAAAMAAAAGAAUACgAAAAMAAAAGAAYACgAAAAMAAAAGAAcACgAAAAMAAAAHAAAACAAAAAMAAFAHAAEACwAAAAIAAFAHAAIACgAAAAMAAAAHAAMACgAAAAMAAAAHAAQACgAAAAMAAAAHAAUACgAAAAMAAAAHAAYACgAAAAMAAAAHAAcACgAAAAMAAAAIAAAACAAAAAMAAFAIAAEACwAAAAIAAFAIAAIACgAAAAMAAAAIAAMACgAAAAMAAAAIAAQACgAAAAMAAAAIAAUACgAAAAMAAAAIAAYACgAAAAMAAAAIAAcACgAAAAMAAAAJAAAACAAAAAMAAFAJAAEACwAAAAIAAFAJAAIACgAAAAMAAAAJAAMACgAAAAMAAAAJAAQACgAAAAMAAAAJAAUACgAAAAMAAAAJAAYACgAAAAMAAAAJAAcACgAAAAMAAAAKAAAACAAAAAMAAFAKAAEACwAAAAIAAFAKAAIACgAAAAMAAAAKAAMACgAAAAMAAAAKAAQACgAAAAMAAAAKAAUACgAAAAMAAAAKAAYACgAAAAMAAAAKAAcACgAAAAMAAAALAAAACAAAAAMAAFALAAEACwAAAAIAAFALAAIACgAAAAMAAAALAAMACgAAAAMAAAALAAQACgAAAAMAAAALAAUACgAAAAMAAAALAAYACgAAAAMAAAALAAcACgAAAAMAAAAAAAgACAAAAAMAAAAAAAkACAAAAAMAAAAAAAoACAAAAAMAAAABAAoACAAAAAMAAAABAAkACAAAAAMAAAABAAgACAAAAAMAAAACAAkACgAAAAMAAAACAAoACgAAAAMAAAADAAkACgAAAAMAAAADAAgACgAAAAMAAAACAAgACgAAAAMAAAAAAAsACAAAAAMAAAAAAAwACAAAAAMAAAABAAwACAAAAAMAAAACAAwACgAAAAMAAAADAAwACgAAAAMAAAAEAAwACgAAAAMAAAAFAAwACgAAAAMAAAAGAAwACgAAAAMAAAAHAAwACgAAAAMAAAAIAAwACgAAAAMAAAAJAAwACgAAAAMAAAAKAAwACgAAAAMAAAALAAwACgAAAAMAAAAMAAwACgAAAAMAAAANAAwACgAAAAMAAAAOAAwACgAAAAMAAAAPAAwACgAAAAMAAAAQAAwACgAAAAMAAAARAAwACgAAAAMAAAASAAwACgAAAAMAAAATAAwACgAAAAMAAAAUAAsACgAAAAMAAAAVAAoACgAAAAMAAAAXAAgACAAAAAMAADAXAAkACAAAAAMAADAXAAoACAAAAAMAADAXAAsACAAAAAMAADAXAAwACAAAAAMAADAWAAwACgAAAAMAAAAVAAwACgAAAAMAAAAUAAwACgAAAAMAAAAVAAsACgAAAAMAAAAWAAsACgAAAAMAAAAWAAoACgAAAAMAAAAMAAAACAAAAAMAAFAMAAEACwAAAAIAAFAMAAIACgAAAAMAAAAMAAMACgAAAAMAAAAMAAQACgAAAAMAAAAMAAUACgAAAAMAAAAMAAYACgAAAAMAAAAMAAcACgAAAAMAAAAMAAgACgAAAAMAAAAMAAkACgAAAAMAAAAMAAoACgAAAAMAAAANAAAACAAAAAMAAFANAAEACwAAAAIAAFANAAIACgAAAAMAAAANAAMACgAAAAMAAAANAAQACgAAAAMAAAANAAUACgAAAAMAAAANAAYACgAAAAMAAAANAAcACgAAAAMAAAANAAgACgAAAAMAAAANAAkACgAAAAMAAAANAAoACgAAAAMAAAAOAAAACAAAAAMAAFAOAAEACwAAAAIAAFAOAAIACgAAAAMAAAAOAAMACgAAAAMAAAAOAAQACgAAAAMAAAAOAAUACgAAAAMAAAAOAAYACgAAAAMAAAAOAAcACgAAAAMAAAAOAAgACgAAAAMAAAAOAAkACgAAAAMAAAAOAAoACgAAAAMAAAAPAAAACAAAAAMAAFAPAAEACwAAAAIAAFAPAAIACgAAAAMAAAAPAAMACgAAAAMAAAAPAAQACgAAAAMAAAAPAAUACgAAAAMAAAAPAAYACgAAAAMAAAAPAAcACgAAAAMAAAAPAAgACgAAAAMAAAAPAAkACgAAAAMAAAAPAAoACgAAAAMAAAAQAAAACAAAAAMAAFAQAAIACgAAAAMAAAAQAAMACgAAAAMAAAAQAAQACgAAAAMAAAAQAAUACgAAAAMAAAAQAAYACgAAAAMAAAAQAAcACgAAAAMAAAAQAAgACgAAAAMAAAAQAAkACgAAAAMAAAAQAAoACgAAAAMAAAARAAAACAAAAAMAAFARAAEACwAAAAIAAFARAAIACgAAAAMAAAARAAMACgAAAAMAAAARAAQACgAAAAMAAAARAAUACgAAAAMAAAARAAYACgAAAAMAAAARAAcACgAAAAMAAAARAAgACgAAAAMAAAARAAkACgAAAAMAAAARAAoACgAAAAMAAAASAAAACAAAAAMAAFASAAEACwAAAAIAAFASAAIACgAAAAMAAAASAAMACgAAAAMAAAASAAQACgAAAAMAAAASAAUACgAAAAMAAAASAAYACgAAAAMAAAASAAcACgAAAAMAAAASAAgACgAAAAMAAAASAAkACgAAAAMAAAASAAoACgAAAAMAAAATAAAACAAAAAMAAFATAAEACwAAAAIAAFATAAIACgAAAAMAAAATAAMACgAAAAMAAAATAAQACgAAAAMAAAATAAUACgAAAAMAAAATAAYACgAAAAMAAAATAAcACgAAAAMAAAATAAgACgAAAAMAAAATAAkACgAAAAMAAAATAAoACgAAAAMAAAAUAAAACAAAAAMAAFAUAAEACwAAAAIAAFAUAAIACgAAAAMAAAAUAAMACgAAAAMAAAAUAAQACgAAAAMAAAAUAAUACgAAAAMAAAAUAAYACgAAAAMAAAAUAAcACgAAAAMAAAAUAAgACgAAAAMAAAAUAAkACgAAAAMAAAAUAAoACgAAAAMAAAAVAAAACAAAAAMAAFAVAAEACwAAAAIAAFAVAAIACgAAAAMAAAAVAAMACgAAAAMAAAAVAAQACgAAAAMAAAAVAAUACgAAAAMAAAAVAAYACgAAAAMAAAAVAAcACgAAAAMAAAAVAAgACgAAAAMAAAAVAAkACgAAAAMAAAAWAAAACAAAAAMAAFAWAAEACwAAAAIAAFAWAAIACgAAAAMAAAAWAAMACgAAAAMAAAAWAAQACgAAAAMAAAAWAAUACgAAAAMAAAAWAAYACgAAAAMAAAAWAAcACgAAAAMAAAAWAAgACgAAAAMAAAAWAAkACgAAAAMAAAAXAAAACAAAAAMAAFAXAAEACQABAAMAAGAXAAIACAAAAAMAADAXAAMACAAAAAMAADAXAAQACAAAAAMAADAXAAUACAAAAAMAADAXAAYACAAAAAMAADAXAAcACAAAAAMAADABAAsACAAAAAMAAAACAAsACgAAAAMAAAADAAoACgAAAAMAAAADAAsACgAAAAMAAAAEAAgACgAAAAMAAAAEAAkACgAAAAMAAAAEAAoACgAAAAMAAAAEAAsACgAAAAMAAAAFAAgACgAAAAMAAAAFAAkACgAAAAMAAAAFAAoACgAAAAMAAAAFAAsACgAAAAMAAAAGAAgACgAAAAMAAAAGAAkACgAAAAMAAAAGAAoACgAAAAMAAAAGAAsACgAAAAMAAAAHAAgACgAAAAMAAAAHAAkACgAAAAMAAAAHAAoACgAAAAMAAAAHAAsACgAAAAMAAAAIAAgACgAAAAMAAAAIAAkACgAAAAMAAAAIAAoACgAAAAMAAAAIAAsACgAAAAMAAAAJAAgACgAAAAMAAAAJAAkACgAAAAMAAAAJAAoACgAAAAMAAAAJAAsACgAAAAMAAAAKAAgACgAAAAMAAAAKAAkACgAAAAMAAAAKAAoACgAAAAMAAAAKAAsACgAAAAMAAAALAAgACgAAAAMAAAALAAkACgAAAAMAAAALAAoACgAAAAMAAAALAAsACgAAAAMAAAAMAAsACgAAAAMAAAANAAsACgAAAAMAAAAOAAsACgAAAAMAAAAPAAsACgAAAAMAAAAQAAsACgAAAAMAAAARAAsACgAAAAMAAAASAAsACgAAAAMAAAATAAsACgAAAAMAAAAJAA0ACAAAAAMAAGAJAA4ACAAAAAMAAGAAAA0ACAAAAAMAAAAAAA4ACQAAAAMAAAABAA4ACAAAAAMAAGABAA0ACQABAAMAAFACAA0ACAAAAAMAAGACAA4ACAAAAAMAAGADAA4ACAAAAAMAAGADAA0ACAAAAAMAAGAEAA0ACAAAAAMAAGAEAA4ACAAAAAMAAGAFAA4ACAAAAAMAAGAFAA0ACAAAAAMAAGAGAA0ACAAAAAMAAGAGAA4ACAAAAAMAAGAHAA4ACAAAAAMAAGAHAA0ACAAAAAMAAGAIAA0ACAAAAAMAAGAIAA4ACAAAAAMAAGAMAA0ACAAAAAMAAGALAA0ACAAAAAMAAGAKAA0ACAAAAAMAAGAKAA4ACAAAAAMAAGALAA4ACAAAAAMAAGAMAA4ACAAAAAMAAGANAA4ACAAAAAMAAGANAA0ACAAAAAMAAGAOAA0ACAAAAAMAAGAOAA4ACAAAAAMAAGAPAA4ACAAAAAMAAGAPAA0ACAAAAAMAAGAQAA0ACAAAAAMAAGAQAA4ACAAAAAMAAGARAA4ACAAAAAMAAGARAA0ACAAAAAMAAGASAA0ACAAAAAMAAGASAA4ACAAAAAMAAGATAA4ACAAAAAMAAGATAA0ACAAAAAMAAGAUAA0ACAAAAAMAAGAUAA4ACAAAAAMAAGAVAA4ACAAAAAMAAGAVAA0ACAAAAAMAAGAWAA0ACAAAAAMAAGAWAA4ACAAAAAMAAGAXAA4ACAAAAAMAAGAYAAAACQAAAAMAADAYAAEACAAAAAMAADAYAAIACAAAAAMAADAYAAMACAAAAAMAADAYAAQACAAAAAMAADAYAAUACAAAAAMAADAYAAYACAAAAAMAADAYAAcACAAAAAMAADAYAAgACAAAAAMAADAYAAkACAAAAAMAADAYAAoACAAAAAMAADAYAAsACAABAAMAAAAYAAwACAABAAMAAAAYAA4ACQAAAAMAAGAYAA0ACAABAAMAAAAQAAEACwAAAAIAAFAXAA0ACQABAAMAAAA=")
tile_set = ExtResource("2_r21l8")

[node name="BackWallLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAACgAAAAMAAAAAAAEACwAAAAQAAAAAAAIACwAAAAQAAAAAAAMACwAAAAQAAAAAAAQACwAAAAQAAAAAAAUACwAAAAQAAAAAAAYACwAAAAQAAAAAAAcACwAAAAQAAAAAAAgACwAAAAQAAAAAAAkACwAAAAQAAAAAAAoACwAAAAQAAAAAAAsACwAAAAQAAAAAAAwACwAAAAQAAAAAAA0ACwAAAAQAAAABAAAACwAAAAQAAFACAAAACwAAAAQAAFADAAAACwAAAAQAAFAEAAAACwAAAAQAAFAFAAAACwAAAAQAAFAGAAAACwAAAAQAAFAHAAAACwAAAAQAAFAIAAAACwAAAAQAAFAJAAAACwAAAAQAAFAKAAAACwAAAAQAAFALAAAACwAAAAQAAFAMAAAACwAAAAQAAFANAAAACwAAAAQAAFAOAAAACwAAAAQAAFARAAAACwAAAAQAAFASAAAACwAAAAQAAFATAAAACwAAAAQAAFAUAAAACwAAAAQAAFAVAAAACwAAAAQAAFAWAAAACwAAAAQAAFAXAAAACwAAAAQAAFAYAAAACgAAAAMAAAAYAAEACwABAAQAAAAYAAIACwABAAQAAAAYAAMACwABAAQAAAAYAAYACwABAAQAAAAYAAUACwABAAQAAAAYAAQACwABAAQAAAAYAAgACwABAAQAAAAYAAkACwABAAQAAAAYAAoACwABAAQAAAAYAAsACwABAAQAAAAYAAwACwABAAQAAAAYAA0ACwABAAQAAAAYAAcACwABAAQAAAAAAA4ADQAAAAUAAAABAA4ADAAAAAUAAAACAA4ADAAAAAUAAAADAA4ADAAAAAUAAAAEAA4ADAAAAAUAAAAFAA4ADAAAAAUAAAAGAA4ADAAAAAUAAAAHAA4ADAAAAAUAAAAIAA4ADAAAAAUAAAAJAA4ADAAAAAUAAAAKAA4ADAAAAAUAAAALAA4ADAAAAAUAAAAMAA4ADAAAAAUAAAANAA4ADAAAAAUAAAAOAA4ADAAAAAUAAAAPAA4ADAAAAAUAAAAQAA4ADAAAAAUAAAARAA4ADAAAAAUAAAASAA4ADAAAAAUAAAATAA4ADAAAAAUAAAAUAA4ADAAAAAUAAAAVAA4ADAAAAAUAAAAWAA4ADAAAAAUAAAAXAA4ADAAAAAUAAAAYAA4ADQABAAUAAAAQAAAACwAAAAQAAFAPAAAACwAAAAQAAFA=")
tile_set = ExtResource("2_r21l8")

[node name="FrontWallLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_r21l8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 360)
enabled = false

[node name="TopBox" type="Area2D" parent="."]
position = Vector2(602, 87)
script = ExtResource("3_ojge6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBox"]
shape = SubResource("RectangleShape2D_cqb4m")

[node name="BottomBox" type="Area2D" parent="."]
position = Vector2(602, 633)
script = ExtResource("3_ojge6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBox"]
shape = SubResource("RectangleShape2D_n3t0k")

[node name="LeftBox" type="Area2D" parent="."]
position = Vector2(74, 357)
script = ExtResource("3_ojge6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBox"]
shape = SubResource("RectangleShape2D_js5nu")

[node name="RightBox" type="Area2D" parent="."]
position = Vector2(1126, 357)
script = ExtResource("3_ojge6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBox"]
shape = SubResource("RectangleShape2D_i78nc")

[connection signal="body_entered" from="TopBox" to="." method="_on_top_box_body_entered"]
[connection signal="body_exited" from="TopBox" to="." method="_on_top_box_body_exited"]
[connection signal="body_entered" from="BottomBox" to="." method="_on_bottom_box_body_entered"]
[connection signal="body_exited" from="BottomBox" to="." method="_on_bottom_box_body_exited"]
[connection signal="body_entered" from="LeftBox" to="." method="_on_left_box_body_entered"]
[connection signal="body_exited" from="LeftBox" to="." method="_on_left_box_body_exited"]
[connection signal="body_entered" from="RightBox" to="." method="_on_left_box_2_body_entered"]
[connection signal="body_exited" from="RightBox" to="." method="_on_left_box_2_body_exited"]
